--- a/TimeTracker/Views/Home/Index.cshtml
+++ b/TimeTracker/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Time Tracker";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="row">
+    <div class="container">
+        <div class="w-50 mx-auto">
+            <a class="display-1" href="/ToDo">TimeTracker</a>
+            <img src="~/images/tasks.svg" class="img-fluid" alt="Tasks" />
+        </div>
+    </div>
+</section>
